[package]
name = "css"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
cssparser = "0.28.1"
html5ever = "0.25.1"
bitflags = "1.1.2"
selectors = "0.23.0"
string_cache = "0.8.1"
smallbitvec = "2.3.0"
regex = "1.5.4"
dyn-fmt = "0.3.0"
