[package]
name = "dom"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "0.25.1"
mime = "0.3.16"
encoding_rs = "0.8.28"
cssparser = "0.28.1"
common = { path = "../common" }
css = { path = "../css" }
log = "0.4.14"
num-traits = "0.2.14"
selectors = "0.23.0"
