[package]
name = "dom"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
css = { path = "../css" }
html5ever = "0.25.1"
mime = "0.3.16"
regex = "1.5.4"
encoding_rs = "0.8.28"
cssparser = "0.28.1"
num-traits = "0.2.14"
selectors = "0.23.0"
euclid = "0.22.6"
