[package]
name = "layout"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cssparser = "0.28.1"
html5ever = "0.25.1"
selectors = "0.23.0"
common = { path = "../common" }
css = { path = "../css" }
dom = { path = "../dom" }
wgpu_glyph = "0.15.1"
glyph_brush = "0.7"
font-kit = "0.10.1"
