[package]
name = "layout"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
css = { path = "../css" }
dom = { path = "../dom" }
cssparser = "0.28.1"
html5ever = "0.25.1"
selectors = "0.23.0"
wgpu = "0.11.0"
wgpu_glyph = "0.15.1"
glyph_brush = "0.7"
font-kit = "0.10.1"
euclid = "0.22.6"
serial_test = "0.5.1"
once_cell = "1.8.0"
regex = "1.5.4"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
